--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,11 @@
+$primary: purple;
+// $secondary: #f0e9e9;
+// $success: $green;
+// $info: $cyan;
+// $warning: $yellow;
+$danger: red;
+// $light: $gray-100;
+$dark: #171616;
 
 
 @import "~bootstrap/scss/bootstrap";
