--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -3,12 +3,8 @@
 {% block title %}Hello MainController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
+<div>
 
     <h1>{{ app_name }}!</h1>
 
@@ -16,7 +12,7 @@
     {% for music in musics %}
         <tr>
             <td>
-                <a href="music/{{ music.getPublicIdentifier() }}">{{ music.getName() }}</a>
+                <a id="audio" href="music/{{ music.getPublicIdentifier() }}">{{ music.getName() }}</a>
             </td>
         </tr>
     {% endfor %}
